tests-integration/fixtures/checking/1772866140_derive_newtype_not_local/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 39
expression: report
---
Terms

Types

Derived
derive Show Wrapper

Diagnostics
error[NonLocalNewtype]: Expected a local newtype, got: Wrapper
  --> 6:1..6:37
  |
6 | derive newtype instance Show Wrapper
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
